--- a/src/app/components/universities-search/universities-search.component.html
+++ b/src/app/components/universities-search/universities-search.component.html
@@ -1,13 +1,26 @@
 <section [formGroup]="searchForm">
-<mat-form-field appearance="fill">
+  <mat-form-field appearance="fill">
     <mat-label>Country</mat-label>
     <input matInput type="text" formControlName="country">
-</mat-form-field>
+  </mat-form-field>
 </section>
-<section></section>
-<ng-template #empty>
-  <p>Type any valid country in a searchbox above</p>
-</ng-template>
-<ng-template #notFound>
-  <p>Did not find any universities for this country! :(</p>
-</ng-template>
+
+<section>
+  <div [ngSwitch]="state | async">
+    
+    <div *ngSwitchCase="'ready'">
+      <mat-list role="list">
+        <mat-list-item *ngFor="let item of universities | async">{{item.name}}</mat-list-item>
+      </mat-list>
+    </div>
+
+    <div *ngSwitchCase="'searchStringEmpty'">
+      <p>Type any valid country in a searchbox above</p>
+    </div>
+
+    <div *ngSwitchCase="'countryNotFound'">
+      <p>Did not find any universities for this country! :(</p>
+    </div>
+
+  </div>
+</section>
